# MatrixMouse

./: .gitignore  Dockerfile  Dockerfile.testrunner  README.md  docker-compose.yml  force-upgrade.sh  install.sh  pyproject.toml  test_runner.sh  uninstall.sh
archived_frontend/old_web_ui/: ui.css  ui.html
docs/: CLI_REFERENCE.md  DEPLOYMENT.md
frontend/: README.md  build.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/playwright-report/: index.html
frontend/src/: app.ts  index.ts  main.ts
frontend/src/api/: client.ts  index.ts  websocket.ts
frontend/src/components/: BlockerStateRenderer.ts  Conversation.ts  CreateTaskForm.ts  DecisionModal.ts  Header.ts  Sidebar.ts  TaskEditForm.ts
frontend/src/pages/: ChannelPage.ts  CreateTaskPage.ts  SettingsPage.ts  StatusPage.ts  TaskPage.ts  TasksPage.ts  index.ts
frontend/src/state/: index.ts  store.ts
frontend/src/styles/: components.css  layout.css  reset.css  variables.css
frontend/src/types/: api.ts  decision.ts  events.ts  index.ts  task.ts
frontend/src/utils/: dom.ts  errorFormatting.ts  format.ts  index.ts
frontend/tests/e2e/: test_accessibility.spec.ts  test_channel_page.spec.ts  test_create_task.spec.ts  test_dashboard.spec.ts  test_decision_modals.spec.ts  test_edit_button_visual.spec.ts  test_integration_flows.spec.ts  test_interjection_routing.spec.ts  test_settings_page.spec.ts  test_sidebar_toggle.spec.ts  test_task_conversation.spec.ts  test_tasks_page.spec.ts  test_visual_regression.spec.ts  test_workspace_tasks.spec.ts
frontend/tests/unit/api/: client.test.ts  websocket.test.ts
frontend/tests/unit/components/: BlockerStateRenderer.test.ts  Conversation.test.ts  CreateTaskForm.test.ts  Header.test.ts  Sidebar.test.ts  Sidebar.visibility.test.ts  SidebarHeader.toggle.test.ts  TaskEditForm.test.ts
frontend/tests/unit/pages/: ChannelPage.coverage.test.ts  ChannelPage.test.ts  CreateTaskPage.test.ts  SettingsPage.test.ts  StatusPage.test.ts  TaskPage.test.ts  TasksPage.test.ts  router.test.ts  routing.test.ts
frontend/tests/unit/state/: store.test.ts
frontend/tests/unit/utils/: format.test.ts
nginx/: nginx.conf
src/matrixmouse/: __init__.py  _service.py  api.py  comms.py  config.py  context.py  graph.py  init.py  loop.py  main.py  memory.py  orchestrator.py  phases.py  router.py  scheduling.py  server.py  stuck.py  task.py  test_server.py  web_ui.py  workspace_state.py
src/matrixmouse/agents/: __init__.py  base.py  coder.py  critic.py  manager.py  merge.py  writer.py
src/matrixmouse/codemap/: __init__.py  _analyzer.py  _registry.py  _types.py
src/matrixmouse/codemap/extractors/: __init__.py  python.py
src/matrixmouse/git/: __init__.py  git_remote_provider.py  github_provider.py
src/matrixmouse/inference/: anthropic.py  availability.py  base.py  fake.py  llamacpp.py  ollama.py  openai.py  openai_compat.py  token_budget.py
src/matrixmouse/repository/: __init__.py  memory_task_repository.py  memory_workspace_state_repository.py  sqlite_db.py  sqlite_task_repository.py  sqlite_workspace_state_repository.py  task_repository.py  workspace_state_repository.py
src/matrixmouse/tools/: __init__.py  _safety.py  code_tools.py  comms_tools.py  file_tools.py  git_tools.py  merge_tools.py  navigation_tools.py  system_tools.py  task_tools.py  test_tools.py
src/matrixmouse/utils/: __init__.py  file_lock.py  logging_utils.py  task_utils.py
src/matrixmouse/web/: build_frontend.py  index.html  ui.css  ui.html  ui.js
src/matrixmouse/web/assets/: main-3CJxc48i.css  main-9A6tU2OT.css  main-BEqoBqHf.css  main-BL1kjp8M.css  main-BR_WvTHE.css  main-Bacnc-wu.css  main-BwECHukW.css  main-CBoXFK8l.css  main-CCkKE4a_.css  main-CF4FeXeS.css  main-CFM4AQAV.css  main-CO6cSlxs.css  main-CRSYKzsb.css  main-C_7YNQwD.css  main-D-y-qMk_.css  main-DJNb8slj.css  main-DhLmr9yH.css  main-DiM2AqbO.css  main-DiXrr3vY.css  main-DpjRbQXc.css  main-HT56xoKA.css  main-VGJudi0P.css  main-alGkGLfl.css  main-o-kbb2e8.css  main-s5kUiO5W.css  (+1 more)
tests/: conftest.py  test_agents.py  test_api.py  test_api_integration.py  test_config.py  test_context.py  test_loop.py  test_main.py  test_orchestrator.py  test_pr_flow.py  test_router.py  test_scheduling.py  test_server.py  test_stuck.py  test_task.py  test_test_server.py  test_web_ui.py  test_workspace_state.py
tests/agents/: test_base.py  test_coder.py  test_critic.py  test_manager.py  test_merge.py  test_writer.py
tests/codemap/: __init__.py  conftest.py  test_analyzer.py  test_edge_cases.py  test_python_extractor.py  test_registry.py  test_types.py
tests/codemap/fixtures/: aliased_imports.py  async_calls.py  async_functions.py  call_variants.py  comments_only.py  decorators.py  deep_calls.py  deep_nesting.py  empty_class.py  empty_file.py  imports_only.py  lambdas.py  multiple_decorators.py  nested_functions.py  nested_symbols.py  parameter_variants.py  relative_import_aliases.py  relative_imports.py  simple_class.py  syntax_error.py  wildcard_import.py
tests/e2e/: __init__.py  conftest.py  run_e2e_tests.py  test_status_dashboard.py  test_tasks_page.py  test_with_python_server.py
tests/frontend/: README.md  __init__.py  conftest.py  mock_llm.py  mock_server.py  test_decision_modals.py  test_edit_button_visual.py  test_interjection_routing.py  test_server.py  test_status_dashboard.py  test_task_conversation.py  test_tasks_enhancements.py  test_tasks_tab.py  test_tasks_tab_alignment.py
tests/git/: conftest.py  test_git_remote_provider_contract.py  test_github_provider.py
tests/inference/: test_anthropic_backend.py  test_availability.py  test_base.py  test_fake_llm.py  test_llamacpp_backend.py  test_llm_backend_contract.py  test_ollama_backend.py  test_openai_backend.py  test_openai_compat.py  test_token_budget.py
tests/repository/: test_task_repository.py  test_workspace_state_repository.py
tests/tools/: test_code_tools.py  test_comms_tools.py  test_file_tools.py  test_git_tools.py  test_merge_tools.py  test_task_tools.py  test_tools_init.py
tests/utils/: test_task_utils.py
