[build-system]
requires = ["uv_build >= 0.10.0"]
build-backend = "uv_build"

[project]
name = "matrixmouse"
version = "0.1.1"
authors = [
  { name="Josh Martin", email="" },
]
description = "A python agent orchestrator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "ollama>=0.6.1",
    "pydantic-settings>=2.13.1",
    "requests>=2.32.5",
    "tomli-w>=1.0",
    "uvicorn[standard]>=0.41.0",
    "PyGithub>=2.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# license = ""
# license-files = ["LICEN[CS]E*"]

# [project.urls]
# Homepage = "https://github.com/pypa/sampleproject"
# Issues = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
matrixmouse = "matrixmouse.main:main"
matrixmouse-service = "matrixmouse._service:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
